@@ -63,6 +63,8 @@
             Thread
             ..
             Util
+                detail
+                ..
             ..
             md
                 DARWIN
